--- a/notebooks/00_exploration.ipynb
+++ b/notebooks/00_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,8 @@
     "from scipy.stats import uniform, ks_1samp\n",
     "from scipy.optimize import curve_fit\n",
     "\n",
-    "# current_dir = os.getcwd()\n",
-    "# parent_dir = os.path.abspath(os.path.join(current_dir, \"..\"))\n",
-    "current_dir = \"/home/kruu/git_folder/porosity_reconstruction/notebooks\"\n",
-    "parent_dir = \"/home/kruu/git_folder/porosity_reconstruction/\"\n",
+    "current_dir = os.getcwd()\n",
+    "parent_dir = os.path.abspath(os.path.join(current_dir, \"..\"))\n",
     "sys.path.append(parent_dir)\n",
     "\n",
     "from utils.data_processing import load_pore_matrices"
