--- a/notebooks/01_vae_training.ipynb
+++ b/notebooks/01_vae_training.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "# current_dir = os.getcwd()\n",
-    "# parent_dir = os.path.abspath(os.path.join(current_dir, \"..\"))\n",
-    "# sys.path.append(parent_dir)\n",
-    "current_dir = \"/home/kruu/git_folder/porosity_reconstruction/notebooks\"\n",
-    "parent_dir = \"/home/kruu/git_folder/porosity_reconstruction/\"\n",
+    "current_dir = os.getcwd()\n",
+    "parent_dir = os.path.abspath(os.path.join(current_dir, \"..\"))\n",
     "sys.path.append(parent_dir)\n",
     "\n",
     "import pandas as pd\n",
