--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +11,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# current_dir = os.getcwd()\n",
-    "# parent_dir = os.path.abspath(os.path.join(current_dir, \"..\"))\n",
-    "current_dir = \"/home/kruu/git_folder/porosity_reconstruction/notebooks\"\n",
-    "parent_dir = \"/home/kruu/git_folder/porosity_reconstruction/\"\n",
+    "current_dir = os.getcwd()\n",
+    "parent_dir = os.path.abspath(os.path.join(current_dir, \"..\"))\n",
     "sys.path.append(parent_dir)\n",
     "\n",
     "from utils.data_processing import load_pore_matrices\n",
@@ -756,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -839,11 +837,8 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "# current_dir = os.getcwd()\n",
-    "# parent_dir = os.path.abspath(os.path.join(current_dir, \"..\"))\n",
-    "# sys.path.append(parent_dir)\n",
-    "current_dir = \"/home/kruu/git_folder/porosity_reconstruction/notebooks\"\n",
-    "parent_dir = \"/home/kruu/git_folder/porosity_reconstruction/\"\n",
+    "current_dir = os.getcwd()\n",
+    "parent_dir = os.path.abspath(os.path.join(current_dir, \"..\"))\n",
     "sys.path.append(parent_dir)\n",
     "\n",
     "import torch\n",
